[package]
name = "ddns-update-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rupnp = "1.1.0"
anyhow = "1.0"
thiserror = "1.0"
parse-display = "0.8"
tokio = { version = "1.29", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
log = "0.4"
simple_logger = "4.2"
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
idna = "0.4"
