[package]
name = "ddns-update-daemon"
version = "0.3.0"
edition = "2021"
authors = ["Dominik Gschwind"]
description = "DynDNS update daemon"
rust-version = "1.75.0"

[dependencies]
rupnp = "1.1.0"
anyhow = "1.0"
thiserror = "1.0"
parse-display = "0.8"
tokio = { version = "1.29", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"], default-features = false }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
log = "0.4"
simple_logger = "4.2"
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
idna = "0.4"
local-ip-address = "0.5.7"

[target.'cfg(target_os = "linux")'.dependencies.reqwest]
version = "0.11"
features = ["rustls-tls"]
default-features = false

[target.'cfg(not(target_os = "linux"))'.dependencies.reqwest]
version = "0.11"
features = ["default-tls"]
default-features = false
