[package]
name = "ddns-update-daemon"
version = "1.0.0"
edition = "2021"
authors = ["Dominik Gschwind"]
description = "DynDNS update daemon using UPnP"
rust-version = "1.75.0"
repository = "https://github.com/N3xed/ddns-update-daemon"
license = "MIT"
keywords = ["ddns", "upnp", "cloudflare", "dns"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
rupnp = "2.0.0"
anyhow = "1.0"
parse-display = "0.9"
tokio = { version = "1.29", features = ["macros", "rt", "time"] }
reqwest = { version = "0.12", features = ["json", "charset", "http2", "macos-system-configuration"], default-features = false }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
simple_logger = "5.0"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
idna = "0.5"
local-ip-address = "0.6"

[target.'cfg(target_os = "linux")'.dependencies.reqwest]
version = "0.12"
features = ["rustls-tls"]
default-features = false

[target.'cfg(not(target_os = "linux"))'.dependencies.reqwest]
version = "0.12"
features = ["default-tls"]
default-features = false
